--- a/index.html
+++ b/index.html
@@ -1,14 +1,35 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Bootstrap demo</title>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 </head>
 
 <body>
+	<!-- <div  class="container "  id="monbouton"  >
+		<div class=" d-flex position-absolute top-50 start-50 translate-middle ">
+			<button onclick="generatePassword(event)"  type="submit" class=" btn btn-dark mr-2 w-50 p-2">Générer un mdp</button>
+			<input type="text" id="password" placeholder="Password" class="w-75 p-2  rounded-1 border-2 border-black">
+		</div>
+	</div>  -->
 
+	<div class="vh-100 d-flex align-items-center justify-content-center">
+		<button onclick="generatePassword(event)" type="submit" id="button" class=" btn btn-dark w-5 p-2">Générer un mdp</button>
+		<div id="password"
+			class="password ms-2 border border-dark rounded d-flex align-items-center justify-content-center user-select-all"
+			style="width: 250px; height: 38px">
+			</div>
+
+	</div>
+
+	<script src="script.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+		integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+		crossorigin="anonymous"></script>
 </body>
 
 </html>
